--- a/.gitmodules
+++ b/.gitmodules
@@ -1,32 +1,32 @@
 [submodule "extensions/gsUnitTest"]
 	path = extensions/gsUnitTest
-	url = ../gsUnitTest.git
+	url = https://github.com/gismo/gsUnitTest.git
 	branch = master
 [submodule "extensions/motor"]
 	path = extensions/motor
-	url = ../motor.git
+	url = https://github.com/gismo/motor.git
 	branch = master
 [submodule "unsupported"]
 	path = extensions/unsupported
-	url = ../unsupported.git
+	url = https://github.com/gismo/unsupported.git
 	branch = master
 [submodule "extensions/gsElasticity"]
 	path = extensions/gsElasticity
-	url = ../gsElasticity.git
+	url = https://github.com/gismo/gsElasticity.git
 	branch = master
 [submodule "extensions/gsExaStencils"]
 	path = extensions/gsExaStencils
-	url = ../gsExaStencils.git
+	url = https://github.com/gismo/gsExaStencils.git
 	branch = master
 [submodule "extensions/gsCompFlow"]
 	path = extensions/gsCompFlow
-	url = ../gsCompFlow.git
+	url = https://github.com/gismo/gsCompFlow.git
 	branch = master
 [submodule "extensions/gsStructuralAnalysis"]
 	path = extensions/gsStructuralAnalysis
-	url = ../gsStructuralAnalysis.git
+	url = https://github.com/gismo/gsStructuralAnalysis.git
 	branch = main
 [submodule "extensions/gsKLShell"]
 	path = extensions/gsKLShell
-	url = ../gsKLShell.git
+	url = https://github.com/gismo/gsKLShell.git
 	branch = main
