--- a/Dockerfile.mayhem
+++ b/Dockerfile.mayhem
@@ -36,15 +36,15 @@ ENV VERSION "$VERSION"
 # This file accepts the following build-time arguments:
 
 # C compiler              : {clang-6.0,clang-7,clang-8,clang-9,clang-10,gcc-7,gcc-8,gcc-9,gcc-10}
-ARG CC=gcc-9
+ARG CC=gcc-10
 # C++ compiler            : {clang++-6.0,clang++-7,clang++-8,clang++-9,clang++-10,g++-7,g++-8,g++-9,g++-10}
-ARG CXX=g++-9
+ARG CXX=g++-10
 
 # Fortran compiler        : {gfortran-7,gfortran-8,gfortran-9,gfortran-10}
 ARG FC=na
 
 # CMAKE_CXX_STANDARD      : {98,11,14,17,20}
-ARG CMAKE_CXX_STANDARD=98
+ARG CMAKE_CXX_STANDARD=20
 
 # CMAKE_BUILD_TYPE        : {Release,Debug,RelWithDebInfo,MinSizeRel}
 ARG CMAKE_BUILD_TYPE=Release
@@ -113,7 +113,7 @@ ARG GISMO_WITH_SMESH=OFF
 ARG GISMO_WITH_SPECTRA=OFF
 
 # GISMO_WITH_SUPERLU      : {ON,OFF}
-ARG GISMO_WITH_SUPERLU=ON
+ARG GISMO_WITH_SUPERLU=OFF
 
 # GISMO_WITH_TAUCS        : {ON,OFF}
 ARG GISMO_WITH_TAUCS=OFF
@@ -122,7 +122,7 @@ ARG GISMO_WITH_TAUCS=OFF
 ARG GISMO_WITH_TRILINOS=OFF
 
 # GISMO_WITH_UMFPACK      : {ON,OFF}
-ARG GISMO_WITH_UMFPACK=ON
+ARG GISMO_WITH_UMFPACK=OFF
 
 # GISMO_WITH_UNUM         : {ON,OFF}
 ARG GISMO_WITH_UNUM=OFF
@@ -348,22 +348,14 @@ ENV LC_ALL en_US.UTF-8
 
 # Add and enable the default user
 ARG USER=gismo
-RUN adduser --disabled-password --gecos '' $USER
-RUN adduser $USER sudo; echo '%sudo ALL=(ALL) NOPASSWD:ALL' >> /etc/sudoers
 
 # Make sure everything is in place
-RUN chown -R $USER:$USER /home/$USER
-USER $USER
 ENV HOME /home/$USER
 ENV USER $USER
 WORKDIR $HOME
 
 # Check out the open-source stable version of G+Smo
-RUN if [ "$GISMO_VERSION" = "HEAD" ] ; then \
-    git clone https://github.com/gismo/gismo.git gismo; \
-    else \
-    git clone https://github.com/gismo/gismo.git gismo && cd gismo && git fetch --all && git checkout $GISMO_VERSION; \
-    fi
+COPY . gismo
 
 # Configure and build G+Smo library
 RUN cd gismo    && \
@@ -401,7 +393,7 @@ RUN cd gismo    && \
         -DGISMO_WITH_UMFPACK=$GISMO_WITH_UMFPACK \
         -DGISMO_WITH_UNUM=$GISMO_WITH_UNUM \
         -DTARGET_ARCHITECTURE=$TARGET_ARCHITECTURE && \
-    make
+    make -j8
 
 # Add directory of executables to search path
 ENV PATH $PATH:$CMAKE_INSTALL_PREFIX:$HOME/gismo/build/bin
